# cb_twitchchatbot_rust

./: .env_example  Cargo.toml
assets/: commands.json
src/: chat_bot.rs  lib.rs  main.rs  tcp_handler.rs
src/config/: command_parser.rs
src/messages/: bot_command.rs  mod.rs  private_message.rs
