[package]
name = "cb_twitchchatbot_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
native-tls = "0.2.11"
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
